<resources>
    <string name="app_name">Dubai Opera</string>
    <string name="loading">Loading...</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_hint">Please enter your registered email address to reset your password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an Account? Create one</string>
    <string name="prefName">userLoginPref</string>
    <string name="prefUserData">userLoginData</string>
    <string name="prefWalletData">walletData</string>
    <string name="prefDubaiOperaTourData">dubaiOperaTourData</string>
    <string name="prefGiftCardData">giftCardData</string>
    <string name="NotificationSwitchValue">notificationSwitchValue</string>
    <string name="PromotionSwitchValue">promotionSwitchValue</string>
    <string name="FeedbackNotiSwitchValue">feedbackNotiSwitchValue</string>
    <string name="NewsLetterSwitchValue">newsLetterSwitchValue</string>
    <string name="BookedShowSwitchValue">bookedShowSwitchValue</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="already_have_an_account">Already have an Account? Login</string>
    <string name="continue_as_guest"><u>Continue as Guest</u></string>
    <string name="create_an_account">Create an Account</string>
    <string name="select">Select</string>
    <string name="send">Send</string>
    <string name="email">Email Address*</string>
    <string name="pass">Password*</string>
    <string name="re_pass">Re-enter Password*</string>
    <string name="firstname">First Name*</string>
    <string name="lastname">Last Name*</string>
    <string name="nationality">Nationality*</string>
    <string name="dob">Date of Birth*</string>
    <string name="mobile">Mobile Number*</string>
    <string name="city">City*</string>
    <string name="state">Emirate or State*</string>
    <string name="country">Country*</string>
    <string name="reg_terms_policy">I agree to the terms and privacy policy</string>
    <string name="terms"><u>terms</u> </string>
    <string name="and">and </string>
    <string name="privacy"><u>privacy policy</u> </string>
    <string name="check_subscribe">Subscribe to Dubai opera newsletter</string>
    <string name="create_account">Create Account</string>
    <string name="setting_alert_show">Alert on the show timings</string>
    <string name="setting_allow_notification">Allow Notifications</string>
    <string name="setting_allow_promotion">Allow Promotions</string>
    <string name="setting_allow_feedback">Allow Feedback Notification</string>
    <string name="setting_weekly_newsletters">Weekly newsletters</string>
    <string name="setting_reminder_booked_show">Reminders for the booked shows</string>
    <string name="setting_language">Language</string>
    <string name="logout">Logout</string>
    <string name="save1">Save</string>
    <string name="arabic_in_english">عربى</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_opera_tour">Dubai Opera Tour</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_promotion">Promotions</string>
    <string name="menu_gift_cards">Gift Cards</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_save_cards">Saved Cards</string>
    <string name="menu_guest">Welcome </string>
    <string name="menu_account">CREATE ACCOUNT</string>
    <string name="menu_welcome_guest">Welcome Guest!</string>
    <string name="termsNconditions">Ticketing Terms and Conditions</string>
    <string name="privacyNpolicy">Privacy Policy</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="dining">Dining</string>
    <string name="listen">Listen</string>
    <string name="home_fragment">Home fragment</string>
    <string name="events_fragment">Events Fragment</string>
    <string name="dining_fragment">Dining Fragment</string>
    <string name="listen_fragment">Listen Fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_name">Simon Pinto</string>
    <string name="profile_info">Member since</string>
    <string name="profile_edit_profile">Edit Profile</string>
    <string name="profile_change_password">Change Password</string>
    <string name="tab_profile">PROFILE</string>
    <string name="tab_loyalty">LOYALTY POINTS</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="gallery">Choose from Gallery</string>
    <string name="camera">Use Camera</string>
    <string name="permissionDenied">Permission denied</string>
    <string name="permissionGranted">Permission Granted</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save Changes</string>
    <string name="profile_choose_photo">Choose Photo</string>
    <string name="curr_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="conf_new_password">Confirm New Password</string>
    <string name="edit_email">Email Address*</string>
    <string name="edit_firstname">First Name</string>
    <string name="edit_lastname">Last Name</string>
    <string name="edit_nationality">Nationality</string>
    <string name="edit_dob">Date of Birth</string>
    <string name="edit_mobile">Mobile Number</string>
    <string name="edit_city">City</string>
    <string name="edit_state">Emirate or State</string>
    <string name="edit_country">Country</string>
    <string name="edit_address">Address</string>
    <string name="reach_us">Reach Us:</string>
    <string name="number"><u>+971 44408888</u></string>
    <string name="contact_us_info">Have questions? Fill the below form and we will get back to you as soon as possible.</string>
    <string name="send_message">Send message</string>
    <string name="contact_us">Contact Us</string>
    <string name="full_name">Full Name*</string>
    <string name="phone_number">Mobile Number</string>
    <string name="email2">Email Address</string>
    <string name="message">Message</string>
    <string name="enquiry_type">Enquiry Type*</string>
    <string name="press_enquiry">Press Enquiry</string>
    <string name="ticketting_enquiry">Ticketing Enquiry</string>
    <string name="venue_booking">Venue Booking</string>
    <string name="careers">Careers</string>
    <string name="social_media">Social Media</string>
    <string name="country_code">Country Code</string>
    <string name="country_code_with_asterisk">Code*</string>
    <string name="find_out_more">Find Out More</string>
    <string name="mr">Mr.</string>
    <string name="ms">Ms.</string>
    <string name="mrs">Mrs.</string>
    <string name="special_requests">Special Requests/Occasions</string>
    <string name="select_title">Select title*</string>
    <string name="call">Call</string>
    <string name="email_btn">Email</string>
    <string name="reserve_a_table">Reserve a Table</string>
    <string name="reserve_a_table2">Reserve a table</string>
    <string name="sean_connolly_dubai_opera">Sean Connolly at Dubai Opera</string>
    <string name="preffereed_date">Preffered date of reservation*</string>
    <string name="telephone_no">Mobile Number</string>
    <string name="email3">Email Address</string>
    <string name="window_table">Window Table</string>
    <string name="total_no_of_guests">Number of guests*</string>
    <string name="full_name1">Full Name</string>
    <string name="submit">Submit</string>
    <string name="select_meal_priod">Please select the meal period*</string>
    <string name="select_time">Please select time*</string>
    <string name="reserve_a_table3">RESERVE TABLE</string>
    <string name="restaurants">Restaurants</string>
    <string name="restaurant">Restaurant</string>
    <string name="sean_connolly">Sean Connolly</string>
    <string name="read_more">READ MORE</string>
    <string name="read_less">READ LESS</string>
    <string name="other_restaurants">OTHER RESTAURANTS</string>
    <string name="dubai_opera">at Dubai Opera</string>
    <string name="rest_search">Enter keyword to search for Restaurant</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="internet_error_msg">Please check your internet connection!</string>
    <string name="errorServerError">Server Error! Please try again later.</string>
    <string name="guest_title">ALERT !!</string>
    <string name="guest_msg">You should be logged in to use this feature.</string>
    <string name="editError">Error</string>
    <string name="errorLoginError">Please enter your login details.</string>
    <string name="errorUserEmail">Incorrect Email Address or Password.</string>
    <string name="errorPassword">Incorrect Email Address or Password.</string>
    <string name="errorUserName">Please enter your login details</string>
    <string name="errorFirstName">Your First Name may not be blank</string>
    <string name="errorLastName">Your Last Name may not be blank</string>
    <string name="errorEmailId">Your Email Address cannot be blank</string>
    <string name="errorEmailInvalid">Your Email Address is not valid</string>
    <string name="errorPasswordEmpty">Your Password cannot be blank</string>
    <string name="errorSamePasswordAsUsername">Password should not be same as Email Address</string>
    <string name="errorMismatchPassword">Your Password has not been confirmed, please retype it correctly.</string>
    <string name="errorNationality">Your Nationality name may not be blank</string>
    <string name="errorDob">Your date of birth may not be blank</string>
    <string name="errorCountryCode">Your Country Code may not be blank</string>
    <string name="errorMobile">Your Mobile Number must be filled in</string>
    <string name="errorLengthMobile">Your Mobile Number length should be of 9 or 10 digit</string>
    <string name="errorCity">Your City name may not be blank</string>
    <string name="errorState">Your Emirate or State name may not be blank</string>
    <string name="errorCountry">Your Country name may not be blank</string>
    <string name="errorLengthPassword">Password should be between 3 to 16 character long</string>
    <string name="errorLengthCity">City should be between 2 to 26 character long</string>
    <string name="errorTerms">You need to accept the terms to proceed for registration</string>
    <string name="errorSelectTitle">Your Title may not be blank</string>
    <string name="errorCurrentPassword">Your Current Password cannot be blank</string>
    <string name="errorNewPassword">Your New Password Cannot be blank</string>
    <string name="errorConfirmNewPassword">Your Password has not been confirmed, please retype it correctly.</string>
    <string name="errorPasswordMatch">Your Password has not been confirmed, please retype it correctly</string>
    <string name="errorLengthNewPassword">New Password should be between 3 to 16 character long</string>
    <string name="errorPreviousAndNewPassword">Current Password and New Password cannot be same</string>
    <string name="buy_tickets">BUY TICKETS</string>
    <string name="venue">Venue</string>
    <string name="date">Date</string>
    <string name="venue_detail">Dubai Opera, Dubai</string>
    <string name="date_detail">VALID FOR 12 MONTHS</string>
    <string name="permission">Permission Denied</string>
    <string name="permission_text">Without this permission the app is unable to receive latest event related information.
    Unable to receive offers. Accept the permission or enable to permission from settings to receive offer notification.</string>
    <string name="permision_accept">Accept</string>
</resources>