<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBurgendy">

        <com.opera.app.customwidget.TextViewWithFont
            android:id="@+id/txtPermissionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission"
            android:gravity="center|left"
            style="@style/label_white_large"
            font:name="Montserrat-Regular"
            android:padding="@dimen/app_margin_ten"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.opera.app.customwidget.TextViewWithFont
            android:id="@+id/txtPermissionMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_margin_twenty"
            android:text="@string/permission_text"
            style="@style/label_black_medium"
            font:name="Montserrat-Regular"/>

        <com.opera.app.customwidget.ButtonWithFont
            android:id="@+id/btnPermissionAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permision_accept"
            android:layout_margin="@dimen/app_margin_twenty"
            android:layout_gravity="center|right"
            android:background="@color/colorBurgendy"
            style="@style/label_white"
            font:name="Montserrat-Regular"/>
    </LinearLayout>
</LinearLayout>