<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6d000000"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:gravity="bottom"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBurgendy"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:orientation="horizontal">

            <com.opera.app.customwidget.TextViewWithFont
                android:id="@+id/tv_forgotPassword"
                style="@style/label_white_large"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/profile_change_password" />

                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_close" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/only_edgeds_curve"
                android:orientation="vertical"
                >

                <com.opera.app.customwidget.EditTextWithFont
                    android:id="@+id/edtCurrentPassword"
                    style="@style/label_black"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:hint="@string/curr_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:windowSoftInputMode="stateHidden|adjustPan"
                    font:name="Montserrat-Regular" />

                <com.opera.app.customwidget.EditTextWithFont
                    android:id="@+id/edtNewPassword"
                    style="@style/label_black"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/edittext_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:windowSoftInputMode="adjustPan"
                    android:padding="10dp"
                    font:name="Montserrat-Regular" />

                <com.opera.app.customwidget.EditTextWithFont
                    android:id="@+id/edtConfNewPassword"
                    style="@style/label_black"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:windowSoftInputMode="adjustPan"
                    android:background="@drawable/edittext_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:hint="@string/conf_new_password"
                    android:inputType="text"
                    android:padding="10dp"
                    font:name="Montserrat-Regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.opera.app.customwidget.ButtonWithFont
                    android:id="@+id/btnCancel"
                    style="@style/label_white"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_ripple_effect_gray"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    font:name="Montserrat-Light" />

                <com.opera.app.customwidget.ButtonWithFont
                    android:id="@+id/btnSave"
                    style="@style/label_white"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_ripple_effect"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    font:name="Montserrat-Light" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
