<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/ic_dubai_opera_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:gravity="center">

            <com.opera.app.customwidget.ButtonWithFont
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_btn_ripple"
                android:text="@string/create_an_account"
                style="@style/label_white_medium"
                android:textAllCaps="false"
                android:layout_margin="10dp"/>

            <com.opera.app.customwidget.ButtonWithFont
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_ripple_effect"
                android:text="@string/already_have_an_account"
                style="@style/label_white_medium"
                android:textAllCaps="false"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <com.opera.app.customwidget.TextViewWithFont
            android:id="@+id/textView_continue_as_guest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/continue_as_guest"
            style="@style/label_white_medium" />
    </LinearLayout>
</LinearLayout>