<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBurgendy"
        android:contentInsetEnd="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <include
            android:id="@+id/inc_set_toolbar"
            layout="@layout/view_home_toolbar" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/header_cover_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_gift_vaoucher"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <com.opera.app.customwidget.TextViewWithFont
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/venue"
                        style="@style/label_burgendy_medium"
                        font:name="Montserrat-Medium"/>

                    <com.opera.app.customwidget.TextViewWithFont
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/venue_detail"
                        style="@style/label_black"
                        font:name="Montserrat-Light"/>

                </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical">

                        <com.opera.app.customwidget.TextViewWithFont
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/date"
                            style="@style/label_burgendy_medium"
                            font:name="Montserrat-Medium"/>

                        <com.opera.app.customwidget.TextViewWithFont
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/date_detail"
                            style="@style/label_black"
                            font:name="Montserrat-Light"/>

                    </LinearLayout>

                </LinearLayout>

                <com.opera.app.customwidget.TextViewWithFont
                    android:id="@+id/txt_gift_card_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    style="@style/label_black"
                    font:name="Montserrat-Light"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <com.opera.app.customwidget.ButtonWithFont
            android:id="@+id/btnBuyTickets"
            style="@style/label_white"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/btn_ripple_effect"
            android:text="@string/buy_tickets"
            android:textAllCaps="true"
            android:layout_margin="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            font:name="Montserrat-Regular"/>
    </LinearLayout>

</LinearLayout>