<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <com.opera.app.customwidget.TextViewWithFont
                android:id="@+id/tv_forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                style="@style/label_black_large"
                android:padding="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <com.opera.app.customwidget.EditTextWithFont
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/edit_email"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:foreground="?attr/selectableItemBackground"
                style="@style/label_black_medium"
                 font:name="Montserrat-Medium"/>


            <com.opera.app.customwidget.ButtonWithFont
                android:id="@+id/btnSend"
                style="@style/label_white_medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_ripple_effect"
                android:text="@string/send"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="30dp"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>