<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBurgendy"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.opera.app.customwidget.TextViewWithFont
                android:id="@+id/tv_forgotPassword"
                style="@style/label_white_large"
                android:layout_width="@dimen/app_width_zero"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:padding="@dimen/app_margin_ten"
                android:text="@string/find_out_more" />


            <LinearLayout
                android:layout_width="@dimen/app_width_zero"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="@color/colorBurgendy"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="@dimen/app_width_vsmall"
                    android:layout_height="@dimen/app_height_vsmall"
                    android:src="@drawable/ic_close" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin_thirty"
            android:orientation="vertical">

            <com.opera.app.customwidget.ButtonWithFont
                android:id="@+id/btnCall"
                style="@style/label_white_medium"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_ripple_effect"
                android:text="@string/call" />

            <com.opera.app.customwidget.ButtonWithFont
                android:id="@+id/btnEmail"
                style="@style/label_white_medium"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/app_margin_twenty"
                android:background="@drawable/btn_ripple_effect"
                android:text="@string/email_btn" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>